Fixed FHIR explorer covering part of the case file when open

--- a/src/style/components/_page.scss
+++ b/src/style/components/_page.scss
@@ -1,6 +1,5 @@
 .page {
-  max-width: 800px;
-  margin: 20px auto;
+  margin: 1em;
   border-radius: 10px;
   background-color: #fff;
   display: flex;
